Updates from Overleaf

--- a/VTthesis.bib
+++ b/VTthesis.bib
@@ -190,5 +190,376 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2009arXiv0910.2998G,
+       author = {{Goodenough}, Lisa and {Hooper}, Dan},
+        title = "{Possible Evidence For Dark Matter Annihilation In The Inner Milky Way From The Fermi Gamma Ray Space Telescope}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Physics - Phenomenology},
+         year = 2009,
+        month = oct,
+          eid = {arXiv:0910.2998},
+        pages = {arXiv:0910.2998},
+archivePrefix = {arXiv},
+       eprint = {0910.2998},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009arXiv0910.2998G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009arXiv0912.3828V,
+       author = {{Vitale}, Vincenzo and {Morselli}, Aldo},
+        title = "{Indirect Search for Dark Matter from the center of the Milky Way with the Fermi-Large Area Telescope}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2009,
+        month = dec,
+          eid = {arXiv:0912.3828},
+        pages = {arXiv:0912.3828},
+archivePrefix = {arXiv},
+       eprint = {0912.3828},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009arXiv0912.3828V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011PhLB..697..412H,
+       author = {{Hooper}, Dan and {Goodenough}, Lisa},
+        title = "{Dark matter annihilation in the Galactic Center as seen by the Fermi Gamma Ray Space Telescope}",
+      journal = {Physics Letters B},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2011,
+        month = mar,
+       volume = {697},
+       number = {5},
+        pages = {412-428},
+          doi = {10.1016/j.physletb.2011.02.029},
+archivePrefix = {arXiv},
+       eprint = {1010.2752},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011PhLB..697..412H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012PhRvD..86h3511A,
+       author = {{Abazajian}, Kevork N. and {Kaplinghat}, Manoj},
+        title = "{Detection of a gamma-ray source in the Galactic Center consistent with extended emission from dark matter annihilation and concentrated astrophysical emission}",
+      journal = {\prd},
+     keywords = {95.35.+d, 95.55.Ka, 95.85.Pw, 97.60.Gb, Dark matter, X- and gamma-ray telescopes and instrumentation, gamma-ray, Pulsars, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Extragalactic Astrophysics, Astrophysics - Galaxy Astrophysics, High Energy Physics - Phenomenology},
+         year = 2012,
+        month = oct,
+       volume = {86},
+       number = {8},
+          eid = {083511},
+        pages = {083511},
+          doi = {10.1103/PhysRevD.86.083511},
+archivePrefix = {arXiv},
+       eprint = {1207.6047},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012PhRvD..86h3511A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013PhRvD..88h3521G,
+       author = {{Gordon}, Chris and {Mac{\'\i}as}, Oscar},
+        title = "{Dark matter and pulsar model constraints from Galactic Center Fermi-LAT gamma-ray observations}",
+      journal = {\prd},
+     keywords = {95.35.+d, 98.80.-k, Dark matter, Cosmology, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Extragalactic Astrophysics, Astrophysics - Galaxy Astrophysics, High Energy Physics - Phenomenology},
+         year = 2013,
+        month = oct,
+       volume = {88},
+       number = {8},
+          eid = {083521},
+        pages = {083521},
+          doi = {10.1103/PhysRevD.88.083521},
+archivePrefix = {arXiv},
+       eprint = {1306.5725},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013PhRvD..88h3521G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvD..89f3515M,
+       author = {{Macias}, Oscar and {Gordon}, Chris},
+        title = "{Contribution of cosmic rays interacting with molecular clouds to the Galactic Center gamma-ray excess}",
+      journal = {\prd},
+     keywords = {95.35.+d, Dark matter, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Extragalactic Astrophysics, Astrophysics - Galaxy Astrophysics, High Energy Physics - Phenomenology},
+         year = 2014,
+        month = mar,
+       volume = {89},
+       number = {6},
+          eid = {063515},
+        pages = {063515},
+          doi = {10.1103/PhysRevD.89.063515},
+archivePrefix = {arXiv},
+       eprint = {1312.6671},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PhRvD..89f3515M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013PDU.....2..118H,
+       author = {{Hooper}, Dan and {Slatyer}, Tracy R.},
+        title = "{Two emission mechanisms in the Fermi Bubbles: A possible signal of annihilating dark matter}",
+      journal = {Physics of the Dark Universe},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Extragalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2013,
+        month = sep,
+       volume = {2},
+       number = {3},
+        pages = {118-138},
+          doi = {10.1016/j.dark.2013.06.003},
+archivePrefix = {arXiv},
+       eprint = {1302.6589},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013PDU.....2..118H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvD..90b3526A,
+       author = {{Abazajian}, Kevork N. and {Canac}, Nicolas and {Horiuchi}, Shunsaku and {Kaplinghat}, Manoj},
+        title = "{Astrophysical and dark matter interpretations of extended gamma-ray emission from the Galactic Center}",
+      journal = {\prd},
+     keywords = {95.35.+d, 95.55.Ka, 95.85.Pw, 97.60.Gb, Dark matter, X- and gamma-ray telescopes and instrumentation, gamma-ray, Pulsars, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2014,
+        month = jul,
+       volume = {90},
+       number = {2},
+          eid = {023526},
+        pages = {023526},
+          doi = {10.1103/PhysRevD.90.023526},
+archivePrefix = {arXiv},
+       eprint = {1402.4090},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PhRvD..90b3526A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016PDU....12....1D,
+       author = {{Daylan}, Tansu and {Finkbeiner}, Douglas P. and {Hooper}, Dan and {Linden}, Tim and {Portillo}, Stephen K.~N. and {Rodd}, Nicholas L. and {Slatyer}, Tracy R.},
+        title = "{The characterization of the gamma-ray signal from the central Milky Way: A case for annihilating dark matter}",
+      journal = {Physics of the Dark Universe},
+     keywords = {Dark matter, Indirect detection, Gamma-rays, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2016,
+        month = jun,
+       volume = {12},
+        pages = {1-23},
+          doi = {10.1016/j.dark.2015.12.005},
+archivePrefix = {arXiv},
+       eprint = {1402.6703},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016PDU....12....1D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015JCAP...03..038C,
+       author = {{Calore}, Francesca and {Cholis}, Ilias and {Weniger}, Christoph},
+        title = "{Background model systematics for the Fermi GeV excess}",
+      journal = {\jcap},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology},
+         year = 2015,
+        month = mar,
+       volume = {2015},
+       number = {3},
+          eid = {038},
+        pages = {038},
+          doi = {10.1088/1475-7516/2015/03/038},
+archivePrefix = {arXiv},
+       eprint = {1409.0042},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015JCAP...03..038C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015PhRvD..91l3010Z,
+       author = {{Zhou}, Bei and {Liang}, Yun-Feng and {Huang}, Xiaoyuan and {Li}, Xiang and {Fan}, Yi-Zhong and {Feng}, Lei and {Chang}, Jin},
+        title = "{GeV excess in the Milky Way: The role of diffuse galactic gamma-ray emission templates}",
+      journal = {\prd},
+     keywords = {98.70.Rz, 95.35.+d, gamma-ray sources, gamma-ray bursts, Dark matter, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2015,
+        month = jun,
+       volume = {91},
+       number = {12},
+          eid = {123010},
+        pages = {123010},
+          doi = {10.1103/PhysRevD.91.123010},
+archivePrefix = {arXiv},
+       eprint = {1406.6948},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015PhRvD..91l3010Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016ApJ...819...44A,
+       author = {{Ajello}, M. and {Albert}, A. and {Atwood}, W.~B. and {Barbiellini}, G. and {Bastieri}, D. and {Bechtol}, K. and {Bellazzini}, R. and {Bissaldi}, E. and {Blandford}, R.~D. and {Bloom}, E.~D. and {Bonino}, R. and {Bottacini}, E. and {Brandt}, T.~J. and {Bregeon}, J. and {Bruel}, P. and {Buehler}, R. and {Buson}, S. and {Caliandro}, G.~A. and {Cameron}, R.~A. and {Caputo}, R. and {Caragiulo}, M. and {Caraveo}, P.~A. and {Cecchi}, C. and {Chekhtman}, A. and {Chiang}, J. and {Chiaro}, G. and {Ciprini}, S. and {Cohen-Tanugi}, J. and {Cominsky}, L.~R. and {Conrad}, J. and {Cutini}, S. and {D'Ammando}, F. and {de Angelis}, A. and {de Palma}, F. and {Desiante}, R. and {Di Venere}, L. and {Drell}, P.~S. and {Favuzzi}, C. and {Ferrara}, E.~C. and {Fusco}, P. and {Gargano}, F. and {Gasparrini}, D. and {Giglietto}, N. and {Giommi}, P. and {Giordano}, F. and {Giroletti}, M. and {Glanzman}, T. and {Godfrey}, G. and {Gomez-Vargas}, G.~A. and {Grenier}, I.~A. and {Guiriec}, S. and {Gustafsson}, M. and {Harding}, A.~K. and {Hewitt}, J.~W. and {Hill}, A.~B. and {Horan}, D. and {Jogler}, T. and {J{\'o}hannesson}, G. and {Johnson}, A.~S. and {Kamae}, T. and {Karwin}, C. and {Kn{\"o}dlseder}, J. and {Kuss}, M. and {Larsson}, S. and {Latronico}, L. and {Li}, J. and {Li}, L. and {Longo}, F. and {Loparco}, F. and {Lovellette}, M.~N. and {Lubrano}, P. and {Magill}, J. and {Maldera}, S. and {Malyshev}, D. and {Manfreda}, A. and {Mayer}, M. and {Mazziotta}, M.~N. and {Michelson}, P.~F. and {Mitthumsiri}, W. and {Mizuno}, T. and {Moiseev}, A.~A. and {Monzani}, M.~E. and {Morselli}, A. and {Moskalenko}, I.~V. and {Murgia}, S. and {Nuss}, E. and {Ohno}, M. and {Ohsugi}, T. and {Omodei}, N. and {Orlando}, E. and {Ormes}, J.~F. and {Paneque}, D. and {Pesce-Rollins}, M. and {Piron}, F. and {Pivato}, G. and {Porter}, T.~A. and {Rain{\`o}}, S. and {Rando}, R. and {Razzano}, M. and {Reimer}, A. and {Reimer}, O. and {Ritz}, S. and {S{\'a}nchez-Conde}, M. and {Saz Parkinson}, P.~M. and {Sgr{\`o}}, C. and {Siskind}, E.~J. and {Smith}, D.~A. and {Spada}, F. and {Spandre}, G. and {Spinelli}, P. and {Suson}, D.~J. and {Tajima}, H. and {Takahashi}, H. and {Thayer}, J.~B. and {Torres}, D.~F. and {Tosti}, G. and {Troja}, E. and {Uchiyama}, Y. and {Vianello}, G. and {Winer}, B.~L. and {Wood}, K.~S. and {Zaharijas}, G. and {Zimmer}, S.},
+        title = "{Fermi-LAT Observations of High-Energy Gamma-Ray Emission toward the Galactic Center}",
+      journal = {\apj},
+     keywords = {cosmic rays, Galaxy: center, gamma-rays: general, gamma-rays: ISM, radiation mechanisms: non-thermal, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Experiment, High Energy Physics - Phenomenology},
+         year = 2016,
+        month = mar,
+       volume = {819},
+       number = {1},
+          eid = {44},
+        pages = {44},
+          doi = {10.3847/0004-637X/819/1/44},
+archivePrefix = {arXiv},
+       eprint = {1511.02938},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...819...44A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017ApJ...840...43A,
+       author = {{Ackermann}, M. and {Ajello}, M. and {Albert}, A. and {Atwood}, W.~B. and {Baldini}, L. and {Ballet}, J. and {Barbiellini}, G. and {Bastieri}, D. and {Bellazzini}, R. and {Bissaldi}, E. and {Blandford}, R.~D. and {Bloom}, E.~D. and {Bonino}, R. and {Bottacini}, E. and {Brandt}, T.~J. and {Bregeon}, J. and {Bruel}, P. and {Buehler}, R. and {Burnett}, T.~H. and {Cameron}, R.~A. and {Caputo}, R. and {Caragiulo}, M. and {Caraveo}, P.~A. and {Cavazzuti}, E. and {Cecchi}, C. and {Charles}, E. and {Chekhtman}, A. and {Chiang}, J. and {Chiappo}, A. and {Chiaro}, G. and {Ciprini}, S. and {Conrad}, J. and {Costanza}, F. and {Cuoco}, A. and {Cutini}, S. and {D'Ammando}, F. and {de Palma}, F. and {Desiante}, R. and {Digel}, S.~W. and {Di Lalla}, N. and {Di Mauro}, M. and {Di Venere}, L. and {Drell}, P.~S. and {Favuzzi}, C. and {Fegan}, S.~J. and {Ferrara}, E.~C. and {Focke}, W.~B. and {Franckowiak}, A. and {Fukazawa}, Y. and {Funk}, S. and {Fusco}, P. and {Gargano}, F. and {Gasparrini}, D. and {Giglietto}, N. and {Giordano}, F. and {Giroletti}, M. and {Glanzman}, T. and {Gomez-Vargas}, G.~A. and {Green}, D. and {Grenier}, I.~A. and {Grove}, J.~E. and {Guillemot}, L. and {Guiriec}, S. and {Gustafsson}, M. and {Harding}, A.~K. and {Hays}, E. and {Hewitt}, J.~W. and {Horan}, D. and {Jogler}, T. and {Johnson}, A.~S. and {Kamae}, T. and {Kocevski}, D. and {Kuss}, M. and {La Mura}, G. and {Larsson}, S. and {Latronico}, L. and {Li}, J. and {Longo}, F. and {Loparco}, F. and {Lovellette}, M.~N. and {Lubrano}, P. and {Magill}, J.~D. and {Maldera}, S. and {Malyshev}, D. and {Manfreda}, A. and {Martin}, P. and {Mazziotta}, M.~N. and {Michelson}, P.~F. and {Mirabal}, N. and {Mitthumsiri}, W. and {Mizuno}, T. and {Moiseev}, A.~A. and {Monzani}, M.~E. and {Morselli}, A. and {Negro}, M. and {Nuss}, E. and {Ohsugi}, T. and {Orienti}, M. and {Orlando}, E. and {Ormes}, J.~F. and {Paneque}, D. and {Perkins}, J.~S. and {Persic}, M. and {Pesce-Rollins}, M. and {Piron}, F. and {Principe}, G. and {Rain{\`o}}, S. and {Rando}, R. and {Razzano}, M. and {Razzaque}, S. and {Reimer}, A. and {Reimer}, O. and {S{\'a}nchez-Conde}, M. and {Sgr{\`o}}, C. and {Simone}, D. and {Siskind}, E.~J. and {Spada}, F. and {Spandre}, G. and {Spinelli}, P. and {Suson}, D.~J. and {Tajima}, H. and {Tanaka}, K. and {Thayer}, J.~B. and {Tibaldo}, L. and {Torres}, D.~F. and {Troja}, E. and {Uchiyama}, Y. and {Vianello}, G. and {Wood}, K.~S. and {Wood}, M. and {Zaharijas}, G. and {Zimmer}, S. and {Fermi LAT Collaboration}},
+        title = "{The Fermi Galactic Center GeV Excess and Implications for Dark Matter}",
+      journal = {\apj},
+     keywords = {cosmic rays, Galaxy: bulge, Galaxy: center, Galaxy: halo, gamma rays: general, ISM: general, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2017,
+        month = may,
+       volume = {840},
+       number = {1},
+          eid = {43},
+        pages = {43},
+          doi = {10.3847/1538-4357/aa6cab},
+archivePrefix = {arXiv},
+       eprint = {1704.03910},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...840...43A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009ApJ...697.1071A,
+       author = {{Atwood}, W.~B. and {Abdo}, A.~A. and {Ackermann}, M. and {Althouse}, W. and {Anderson}, B. and {Axelsson}, M. and {Baldini}, L. and {Ballet}, J. and {Band}, D.~L. and {Barbiellini}, G. and {Bartelt}, J. and {Bastieri}, D. and {Baughman}, B.~M. and {Bechtol}, K. and {B{\'e}d{\'e}r{\`e}de}, D. and {Bellardi}, F. and {Bellazzini}, R. and {Berenji}, B. and {Bignami}, G.~F. and {Bisello}, D. and {Bissaldi}, E. and {Blandford}, R.~D. and {Bloom}, E.~D. and {Bogart}, J.~R. and {Bonamente}, E. and {Bonnell}, J. and {Borgland}, A.~W. and {Bouvier}, A. and {Bregeon}, J. and {Brez}, A. and {Brigida}, M. and {Bruel}, P. and {Burnett}, T.~H. and {Busetto}, G. and {Caliandro}, G.~A. and {Cameron}, R.~A. and {Caraveo}, P.~A. and {Carius}, S. and {Carlson}, P. and {Casandjian}, J.~M. and {Cavazzuti}, E. and {Ceccanti}, M. and {Cecchi}, C. and {Charles}, E. and {Chekhtman}, A. and {Cheung}, C.~C. and {Chiang}, J. and {Chipaux}, R. and {Cillis}, A.~N. and {Ciprini}, S. and {Claus}, R. and {Cohen-Tanugi}, J. and {Condamoor}, S. and {Conrad}, J. and {Corbet}, R. and {Corucci}, L. and {Costamante}, L. and {Cutini}, S. and {Davis}, D.~S. and {Decotigny}, D. and {DeKlotz}, M. and {Dermer}, C.~D. and {de Angelis}, A. and {Digel}, S.~W. and {do Couto e Silva}, E. and {Drell}, P.~S. and {Dubois}, R. and {Dumora}, D. and {Edmonds}, Y. and {Fabiani}, D. and {Farnier}, C. and {Favuzzi}, C. and {Flath}, D.~L. and {Fleury}, P. and {Focke}, W.~B. and {Funk}, S. and {Fusco}, P. and {Gargano}, F. and {Gasparrini}, D. and {Gehrels}, N. and {Gentit}, F. -X. and {Germani}, S. and {Giebels}, B. and {Giglietto}, N. and {Giommi}, P. and {Giordano}, F. and {Glanzman}, T. and {Godfrey}, G. and {Grenier}, I.~A. and {Grondin}, M. -H. and {Grove}, J.~E. and {Guillemot}, L. and {Guiriec}, S. and {Haller}, G. and {Harding}, A.~K. and {Hart}, P.~A. and {Hays}, E. and {Healey}, S.~E. and {Hirayama}, M. and {Hjalmarsdotter}, L. and {Horn}, R. and {Hughes}, R.~E. and {J{\'o}hannesson}, G. and {Johansson}, G. and {Johnson}, A.~S. and {Johnson}, R.~P. and {Johnson}, T.~J. and {Johnson}, W.~N. and {Kamae}, T. and {Katagiri}, H. and {Kataoka}, J. and {Kavelaars}, A. and {Kawai}, N. and {Kelly}, H. and {Kerr}, M. and {Klamra}, W. and {Kn{\"o}dlseder}, J. and {Kocian}, M.~L. and {Komin}, N. and {Kuehn}, F. and {Kuss}, M. and {Landriu}, D. and {Latronico}, L. and {Lee}, B. and {Lee}, S. -H. and {Lemoine-Goumard}, M. and {Lionetto}, A.~M. and {Longo}, F. and {Loparco}, F. and {Lott}, B. and {Lovellette}, M.~N. and {Lubrano}, P. and {Madejski}, G.~M. and {Makeev}, A. and {Marangelli}, B. and {Massai}, M.~M. and {Mazziotta}, M.~N. and {McEnery}, J.~E. and {Menon}, N. and {Meurer}, C. and {Michelson}, P.~F. and {Minuti}, M. and {Mirizzi}, N. and {Mitthumsiri}, W. and {Mizuno}, T. and {Moiseev}, A.~A. and {Monte}, C. and {Monzani}, M.~E. and {Moretti}, E. and {Morselli}, A. and {Moskalenko}, I.~V. and {Murgia}, S. and {Nakamori}, T. and {Nishino}, S. and {Nolan}, P.~L. and {Norris}, J.~P. and {Nuss}, E. and {Ohno}, M. and {Ohsugi}, T. and {Omodei}, N. and {Orlando}, E. and {Ormes}, J.~F. and {Paccagnella}, A. and {Paneque}, D. and {Panetta}, J.~H. and {Parent}, D. and {Pearce}, M. and {Pepe}, M. and {Perazzo}, A. and {Pesce-Rollins}, M. and {Picozza}, P. and {Pieri}, L. and {Pinchera}, M. and {Piron}, F. and {Porter}, T.~A. and {Poupard}, L. and {Rain{\`o}}, S. and {Rando}, R. and {Rapposelli}, E. and {Razzano}, M. and {Reimer}, A. and {Reimer}, O. and {Reposeur}, T. and {Reyes}, L.~C. and {Ritz}, S. and {Rochester}, L.~S. and {Rodriguez}, A.~Y. and {Romani}, R.~W. and {Roth}, M. and {Russell}, J.~J. and {Ryde}, F. and {Sabatini}, S. and {Sadrozinski}, H.~F. -W. and {Sanchez}, D. and {Sander}, A. and {Sapozhnikov}, L. and {Parkinson}, P.~M. Saz and {Scargle}, J.~D. and {Schalk}, T.~L. and {Scolieri}, G. and {Sgr{\`o}}, C. and {Share}, G.~H. and {Shaw}, M. and {Shimokawabe}, T. and {Shrader}, C. and {Sierpowska-Bartosik}, A. and {Siskind}, E.~J. and {Smith}, D.~A. and {Smith}, P.~D. and {Spandre}, G. and {Spinelli}, P. and {Starck}, J. -L. and {Stephens}, T.~E. and {Strickman}, M.~S. and {Strong}, A.~W. and {Suson}, D.~J. and {Tajima}, H. and {Takahashi}, H. and {Takahashi}, T. and {Tanaka}, T. and {Tenze}, A. and {Tether}, S. and {Thayer}, J.~B. and {Thayer}, J.~G. and {Thompson}, D.~J. and {Tibaldo}, L. and {Tibolla}, O. and {Torres}, D.~F. and {Tosti}, G. and {Tramacere}, A. and {Turri}, M. and {Usher}, T.~L. and {Vilchez}, N. and {Vitale}, V. and {Wang}, P. and {Watters}, K. and {Winer}, B.~L. and {Wood}, K.~S. and {Ylinen}, T. and {Ziegler}, M.},
+        title = "{The Large Area Telescope on the Fermi Gamma-Ray Space Telescope Mission}",
+      journal = {\apj},
+     keywords = {cosmic rays, galaxies: active, Galaxy: general, gamma rays: observations, Sun: X-rays, gamma rays, telescopes, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2009,
+        month = jun,
+       volume = {697},
+       number = {2},
+        pages = {1071-1102},
+          doi = {10.1088/0004-637X/697/2/1071},
+archivePrefix = {arXiv},
+       eprint = {0902.1089},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009ApJ...697.1071A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2002NewAR..46..767H,
+       author = {{Hoekstra}, Henk and {Yee}, H.~K.~C. and {Gladders}, Michael D.},
+        title = "{Current status of weak gravitational lensing}",
+      journal = {\nar},
+     keywords = {Astrophysics},
+         year = 2002,
+        month = nov,
+       volume = {46},
+       number = {12},
+        pages = {767-781},
+          doi = {10.1016/S1387-6473(02)00245-2},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0205205},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002NewAR..46..767H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2006ApJS..162...38A,
+       author = {{Adelman-McCarthy}, Jennifer K. and {Ag{\"u}eros}, Marcel A. and {Allam}, Sahar S. and {Anderson}, Kurt S.~J. and {Anderson}, Scott F. and {Annis}, James and {Bahcall}, Neta A. and {Baldry}, Ivan K. and {Barentine}, J.~C. and {Berlind}, Andreas and {Bernardi}, Mariangela and {Blanton}, Michael R. and {Boroski}, William N. and {Brewington}, Howard J. and {Brinchmann}, Jarle and {Brinkmann}, J. and {Brunner}, Robert J. and {Budav{\'a}ri}, Tam{\'a}s and {Carey}, Larry N. and {Carr}, Michael A. and {Castander}, Francisco J. and {Connolly}, A.~J. and {Csabai}, Istv{\'a}n and {Czarapata}, Paul C. and {Dalcanton}, Julianne J. and {Doi}, Mamoru and {Dong}, Feng and {Eisenstein}, Daniel J. and {Evans}, Michael L. and {Fan}, Xiaohui and {Finkbeiner}, Douglas P. and {Friedman}, Scott D. and {Frieman}, Joshua A. and {Fukugita}, Masataka and {Gillespie}, Bruce and {Glazebrook}, Karl and {Gray}, Jim and {Grebel}, Eva K. and {Gunn}, James E. and {Gurbani}, Vijay K. and {de Haas}, Ernst and {Hall}, Patrick B. and {Harris}, Frederick H. and {Harvanek}, Michael and {Hawley}, Suzanne L. and {Hayes}, Jeffrey and {Hendry}, John S. and {Hennessy}, Gregory S. and {Hindsley}, Robert B. and {Hirata}, Christopher M. and {Hogan}, Craig J. and {Hogg}, David W. and {Holmgren}, Donald J. and {Holtzman}, Jon A. and {Ichikawa}, Shin-ichi and {Ivezi{\'c}}, {\v{Z}}eljko and {Jester}, Sebastian and {Johnston}, David E. and {Jorgensen}, Anders M. and {Juri{\'c}}, Mario and {Kent}, Stephen M. and {Kleinman}, S.~J. and {Knapp}, G.~R. and {Kniazev}, Alexei Yu. and {Kron}, Richard G. and {Krzesinski}, Jurek and {Kuropatkin}, Nikolay and {Lamb}, Donald Q. and {Lampeitl}, Hubert and {Lee}, Brian C. and {Leger}, R. French and {Lin}, Huan and {Long}, Daniel C. and {Loveday}, Jon and {Lupton}, Robert H. and {Margon}, Bruce and {Mart{\'\i}nez-Delgado}, David and {Mandelbaum}, Rachel and {Matsubara}, Takahiko and {McGehee}, Peregrine M. and {McKay}, Timothy A. and {Meiksin}, Avery and {Munn}, Jeffrey A. and {Nakajima}, Reiko and {Nash}, Thomas and {Neilsen}, Eric H., Jr. and {Newberg}, Heidi Jo and {Newman}, Peter R. and {Nichol}, Robert C. and {Nicinski}, Tom and {Nieto-Santisteban}, Maria and {Nitta}, Atsuko and {O'Mullane}, William and {Okamura}, Sadanori and {Owen}, Russell and {Padmanabhan}, Nikhil and {Pauls}, George and {Peoples}, John, Jr. and {Pier}, Jeffrey R. and {Pope}, Adrian C. and {Pourbaix}, Dimitri and {Quinn}, Thomas R. and {Richards}, Gordon T. and {Richmond}, Michael W. and {Rockosi}, Constance M. and {Schlegel}, David J. and {Schneider}, Donald P. and {Schroeder}, Joshua and {Scranton}, Ryan and {Seljak}, Uro{\v{s}} and {Sheldon}, Erin and {Shimasaku}, Kazu and {Smith}, J. Allyn and {Smol{\v{c}}i{\'c}}, Vernesa and {Snedden}, Stephanie A. and {Stoughton}, Chris and {Strauss}, Michael A. and {SubbaRao}, Mark and {Szalay}, Alexander S. and {Szapudi}, Istv{\'a}n and {Szkody}, Paula and {Tegmark}, Max and {Thakar}, Aniruddha R. and {Tucker}, Douglas L. and {Uomoto}, Alan and {Vanden Berk}, Daniel E. and {Vandenberg}, Jan and {Vogeley}, Michael S. and {Voges}, Wolfgang and {Vogt}, Nicole P. and {Walkowicz}, Lucianne M. and {Weinberg}, David H. and {West}, Andrew A. and {White}, Simon D.~M. and {Xu}, Yongzhong and {Yanny}, Brian and {Yocum}, D.~R. and {York}, Donald G. and {Zehavi}, Idit and {Zibetti}, Stefano and {Zucker}, Daniel B.},
+        title = "{The Fourth Data Release of the Sloan Digital Sky Survey}",
+      journal = {\apjs},
+     keywords = {Atlases, Catalogs, Surveys, Astrophysics},
+         year = 2006,
+        month = jan,
+       volume = {162},
+       number = {1},
+        pages = {38-48},
+          doi = {10.1086/497917},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0507711},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006ApJS..162...38A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2006ApJ...648L.109C,
+       author = {{Clowe}, Douglas and {Brada{\v{c}}}, Maru{\v{s}}a and {Gonzalez}, Anthony H. and {Markevitch}, Maxim and {Randall}, Scott W. and {Jones}, Christine and {Zaritsky}, Dennis},
+        title = "{A Direct Empirical Proof of the Existence of Dark Matter}",
+      journal = {\apjl},
+     keywords = {Cosmology: Dark Matter, galaxies: clusters: individual (1E 0657-558), Cosmology: Gravitational Lensing, Astrophysics},
+         year = 2006,
+        month = sep,
+       volume = {648},
+       number = {2},
+        pages = {L109-L113},
+          doi = {10.1086/508162},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0608407},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006ApJ...648L.109C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1979ARNPS..29..313S,
+       author = {{Steigman}, G.},
+        title = "{Cosmology confronts particle physics.}",
+      journal = {Annual Review of Nuclear and Particle Science},
+     keywords = {Physics},
+         year = 1979,
+        month = jan,
+       volume = {29},
+        pages = {313-338},
+          doi = {10.1146/annurev.ns.29.120179.001525},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1979ARNPS..29..313S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005PhR...405..279B,
+       author = {{Bertone}, Gianfranco and {Hooper}, Dan and {Silk}, Joseph},
+        title = "{Particle dark matter: evidence, candidates and constraints}",
+      journal = {\physrep},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics},
+         year = 2005,
+        month = jan,
+       volume = {405},
+       number = {5-6},
+        pages = {279-390},
+          doi = {10.1016/j.physrep.2004.08.031},
+archivePrefix = {arXiv},
+       eprint = {hep-ph/0404175},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005PhR...405..279B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2019arXiv190407915L,
+       author = {{Lin}, Tongyan},
+        title = "{TASI lectures on dark matter models and direct detection}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = apr,
+          eid = {arXiv:1904.07915},
+        pages = {arXiv:1904.07915},
+archivePrefix = {arXiv},
+       eprint = {1904.07915},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190407915L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2019FrP.....7...75G,
+       author = {{Giagu}, Stefano},
+        title = "{WIMP Dark matter searches with the ATLAS detector at the LHC}",
+      journal = {Frontiers in Physics},
+     keywords = {LHC, dark matter, ATLAS \& Compact Muon Solenoid Detector experiments, WIMP, Particle physics, Hadron collider experiments},
+         year = 2019,
+        month = may,
+       volume = {7},
+          eid = {75},
+        pages = {75},
+          doi = {10.3389/fphy.2019.00075},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019FrP.....7...75G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
